[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "luxelead"
version = "0.2.0"
description = "LuxeLead PPT Generator - 轻奢领先竞品的PPT排版工具"
authors = [
  { name="LuxeLead Team", email="support@luxelead.com" }
]
dependencies = [
  "python-pptx>=0.6.23",
  "Pillow>=10.0.0",
  "pi-heif>=1.0.0",
  "lxml>=4.9.0",
  "ultralytics>=8.0.0",
]
requires-python = ">=3.8"

[project.scripts]
luxelead = "luxelead.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]